--- a/home/templates/home/registration.html
+++ b/home/templates/home/registration.html
@@ -1,46 +1,119 @@
+<!DOCTYPE html>
+<html lang="en">
+{% load static %}
+{% load add_attr %}
 <head>
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href='{% static "css/registration_style.css" %}' media="screen" />
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600' rel='stylesheet' type='text/css'>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css" rel="stylesheet">
-</head>    
+    <!-- Required meta tags-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Colorlib Templates">
+    <meta name="author" content="Colorlib">
+    <meta name="keywords" content="Colorlib Templates">
 
+    <!-- Title Page-->
+    <title>Register Forms</title>
 
-<body>    
+    <!-- Icons font CSS-->
+    <link href="{% static 'vendor2/mdi-font/css/material-design-iconic-font.min.css' %}" rel="stylesheet" media="all" />
+    <link href="{% static 'vendor2/font-awesome-4.7/css/font-awesome.min.css' %}" rel="stylesheet" media="all">
+    <!-- Font special for pages-->
+    <link href="{% static 'https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i' %}" rel="stylesheet">
 
-    <div class="testbox">
-    <h1>Registration</h1>
+    <!-- Vendor CSS-->
+    <link href="{% static 'vendor2/select2/select2.min.css' %}" rel="stylesheet" media="all">
+    <link href="{% static 'vendor2/datepicker/daterangepicker.css' %}" rel="stylesheet" media="all">
 
-    <form action="" method="POST">
-    {% csrf_token %}
-        <hr>
-        {% comment %} <div class="accounttype">
-        <input type="radio" value="None" id="radioOne" name="account" checked/>
-        <label for="radioOne" class="radio" chec>Personal</label>
-        <input type="radio" value="None" id="radioTwo" name="account" />
-        <label for="radioTwo" class="radio">Company</label>
-        </div> {% endcomment %}
-        <hr>
-        <label id="icon" for="name"><i class="icon-envelope "></i></label>
-        <input type="text" name="email" id="name" placeholder="Email" required/>
-        <label id="icon" for="name"><i class="icon-user "></i></label>
-        <input type="text" name="username" id="username" placeholder="username" required/>
-        <label id="icon" for="name"><i class="icon-user"></i></label>
-        <input type="text" name="firstname" id="firstname" placeholder="First Name" required/>
-        <label id="icon" for="name"><i class="icon-user"></i></label>
-        <input type="text" name="lastname" id="lastname" placeholder="Last Name" required/>
-        <label id="icon" for="name"><i class="icon-shield"></i></label>
-        <input type="password" name="password" id="password" placeholder="Password" required/>
-        
-        {% comment %} <div class="gender">
-            <input type="radio" value="None" id="male" name="gender" checked/>
-            <label for="male" class="radio" chec>Male</label>
-            <input type="radio" value="None" id="female" name="gender" />
-            <label for="female" class="radio">Female</label>
-        </div>  {% endcomment %}
-        <p>By clicking Register, you agree on our <a href="#">terms and condition</a>.</p>
-        {% comment %} <a href="#" class="button">Register</a> {% endcomment %}
-        <button class="button">Login</button>
-    </form>
+    <!-- Main CSS-->
+    <link href="{% static 'css/main2.css' %}" rel="stylesheet" media="all">
+</head>
+
+<body>
+    <div class="page-wrapper bg-gra-02 p-t-130 p-b-100 font-poppins">
+        <div class="wrapper wrapper--w680">
+            <div class="card card-4">
+                <div class="card-body">
+                    <h2 class="title">Registration Form</h2>
+                    <form action="" method="POST">
+                        {% csrf_token %}
+                        <div class="row row-space">
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">Username</label>
+                                    {{ form.username.errors }}
+                                    <input class="input--style-4" type="text" name="username" id="username">
+                                </div>
+                            </div>
+                            <div class="col-2">
+                                <div class="input-group">
+                                    
+                                    <label class="label">Email</label>
+                                    {{ form.email.errors }}
+                                    <input class="input--style-4" type="text" name="email" id="name">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row row-space">
+                            <div class="col-2">
+                                <div class="input-group">
+                                    
+                                    <label class="label">First name</label>
+                                    {{ form.first_name.errors }}
+                                    <input class="input--style-4" type="text" name="first_name" id="firstname">
+                                </div>
+                            </div>
+                            <div class="col-2">
+                                <div class="input-group">
+                                    
+                                    <label class="label">Last name</label>
+                                    {{ form.last_name.errors }}
+                                    <input class="input--style-4" type="text" name="last_name" id="lastname">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row row-space">
+                            <div class="col-2">
+                                <div class="input-group">
+                                    
+                                    <label class="label">Password</label>
+                                    {{ form.password1.errors }}
+                                    <input class="input--style-4" type="password" name="password1" id="password">
+                                </div>
+                            </div>
+
+                            <div class="col-2">
+                                <div class="input-group">
+                                    
+                                    <label class="label">Password(Re-enter)</label>
+                                    {{ form.password2.errors }}
+                                    <input class="input--style-4" type="password" name="password2" id="password">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="p-t-15">
+                            {% if form.non_field_errors %}
+							    {% for error in form.non_field_errors %}
+							        <p style="color: red"> {{ error }}</p>
+							    {% endfor %}
+						    {% endif %}
+                            <button class="btn btn--radius-2 btn--blue" type="submit">Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-</body>
+
+    <!-- Jquery JS-->
+    <script src="{% static 'vendor2/jquery/jquery.min.js' %}"></script>
+    <!-- Vendor JS-->
+    <script src="{% static 'vendor2/select2/select2.min.js' %}"></script>
+    <script src="{% static 'vendor2/datepicker/moment.min.js' %}"></script>
+    <script src="{% static 'vendor2/datepicker/daterangepicker.js' %}"></script>
+
+    <!-- Main JS-->
+    <script src="js/global.js"></script>
+
+</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+
+</html>
+<!-- end document-->
