--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -1,59 +1,80 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-</head>
-<body>
-	<div id = "header" class = "row d-flex justify-content-between">
-		<div>
-			<img src="https://ctftime.org/media/cache/8d/57/8d574e231ac146c4da337350ee2d8211.png" class = "rounded float-left">
-		</div>
-		<div>
-			<p style="font-size: 30px;">ProPTIT AI Force submit web</p>
-		</div>
-	</div>
-	
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">Navbar</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
+<!DOCTYPE html>
+<html lang ="en">
+{% load static %}
+{% load add_attr %}	
+	<head>
+		<title>ProPTIT</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="{% static 'css/main01.css' %}" />
+	</head>
+	<body>
 
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item">
-					<a class="nav-link" href="/home/">Home <span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					Contests
-					</a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						{% block dropdown %}
-						{% endblock %}
-					</div>
-				</li>
-			</ul>
-			<!--
-			<form class="form-inline my-2 my-lg-0">
-				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-			</form>
-			-->
-		</div>
-	</nav>
-	
-	<div>
-		<div class="container">
-			{% block content %}
+		<!-- Header -->
+			<header id="header" class="alt">
+				<div class="logo"><img src="{% static 'images/ProPTIT.png' %}" style="width: 40px; height: 40px;" alt="" />
+					<a href="#">ProPTIT <span>AI FORCE</span></a></div>
+				<a href="#menu">Menu</a>
+			</header>
+
+		<!-- Nav -->
+			<nav id="menu">
+				<ul class="links">
+					<li><a href="#">Home</a></li>
+					<li><a href="home/contest/1">Contest</a></li>
+					<li><a href="logout"">Logout</a></li>
+				</ul>
+			</nav>
+
+		<!-- Banner -->
+				{% block banner %}
+
+				{% endblock %}
+
+		<!-- One -->
+		<section id="one" class="wrapper style2">
+			<div class="inner">
+				<div class="grid-style">
+
+					{% block content %}
+
+					{% endblock %}
+				</div>
+			</div>
+		</section>
+		<!-- Three -->
+			<section id="two" class="wrapper style3">
+				<div class="inner">
+					<header class="align-center">
+						<p>backend by Hanh Nguyen Duc</p>
+						<h2>Trang web submit của team AI Force ProPTIT</h2>
+					</header>
+				</div>
+			</section>
+
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="container">
+					<ul class="icons">
+						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					</ul>
+				</div>
+				<div class="copyright">
+					COPYRIGHT © 2020 Đô Đô
+				</div>
+			</footer>
+
+		<!-- Scripts -->
+			<script src="{% static 'js/jquery.min.js' %}"></script>
+			<script src="{% static 'js/jquery.scrollex.min.js' %}"></script>
+			<script src="{% static 'js/skel.min.js' %}"></script>
+			<script src="{% static 'js/util01.js' %}"></script>
+			<script src="{% static 'js/main01.js' %}"></script>
+			{% block script %}
 			{% endblock %}
-		</div>
-	</div>
 
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
+	</body>
 </html>
