--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -2,6 +2,7 @@
 
 {% load crispy_forms_tags %}
 {% load static %}
+{% load sizify %}
 
 {% comment %} {% block dropdown %}
     {% for contest in list_contest %}
