--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -21,8 +21,8 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="#">Home</a></li>
-					<li><a href="home/contest/1">Contest</a></li>
-					<li><a href="logout"">Logout</a></li>
+					<li><a href="/home/contest/1">Contest</a></li>
+					<li><a href="logout">Logout</a></li>
 				</ul>
 			</nav>
 
