--- a/home/templates/home/contest.html
+++ b/home/templates/home/contest.html
@@ -22,8 +22,8 @@
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="/home/">Home</a></li>
-					<li><a href="/home/">Contest</a></li>
+					<li><a href="/">Home</a></li>
+					<li><a href="#">Contest</a></li>
 					<li><a href="logout">Logout</a></li>
 				</ul>
 			</nav>
