--- a/home/templates/home/login.html
+++ b/home/templates/home/login.html
@@ -76,7 +76,7 @@
 					</div>
 
 					<div class="text-center p-t-136">
-						<a class="txt2" href="http://127.0.0.1:8000/home/registration/">
+						<a class="txt2" href="/registration/">
 							Create your Account
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
