fix missing test data

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -19,7 +19,7 @@
             <div class="inner">
                 <header>
                     <p>On going</p>
-                    <h2><a href="/home/contest/{{content.contest_id}}">{{ content.name }}</a></h2>
+                    <h2><a href="/contest/{{content.contest_id}}">{{ content.name }}</a></h2>
                 </header>
             </div>
         </article>
@@ -52,7 +52,7 @@
                         </header>
                         <p class="description_area">{{ content.description }}</p>
                         <footer class="align-center">
-                            <a href="/home/contest/{{content.contest_id}}" class="button alt">Xem Thêm</a>
+                            <a href="/contest/{{content.contest_id}}" class="button alt">Xem Thêm</a>
                         </footer>
                     </div>
                 </div>
