--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -13,7 +13,7 @@
 		<!-- Header -->
 			<header id="header" class="alt">
 				<div class="logo"><img src="{% static 'images/ProPTIT.png' %}" style="width: 40px; height: 40px;" alt="" />
-					<a href="#">ProPTIT <span>AI FORCE</span></a></div>
+					<a href="/">ProPTIT <span>AI FORCE</span></a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
