I hope this is the fucking last update

--- a/home/templates/home/contest.html
+++ b/home/templates/home/contest.html
@@ -68,7 +68,7 @@
 								{% comment %} <h3>Download Data: </h3> {% endcomment %}
 								<p>You can download data here:</p>
 								<p><a href="{{content.data_path}}" download>Download Data</a></p>
-								<p><a href="{{content.data_test_path}}" download>Download Test Data</a></p>
+								<p><a href="{{content.test_data_path}}" download>Download Test Data</a></p>
 							</div>
 
 						</div>
